Fixed some minor SCSS issues
Centered the Login Form as it was not centered properly and updated Sign up form scss making the font smaller and adding hover effect for the button.

--- a/my-app/src/component/LoginForm/LoginForm.scss
+++ b/my-app/src/component/LoginForm/LoginForm.scss
@@ -1,9 +1,7 @@
 .login-form {
   position: relative;
   max-width: 400px;
-  margin-top: 10%;
-  margin-left: 37.5%;
-  margin-bottom: 37.5%;
+  margin: 10% auto 37.5%;
   padding: 20px;
   background-color: #fff;
   border: 1px solid #0000;
